Add database build script

--- a/composer.json
+++ b/composer.json
@@ -45,11 +45,16 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ],
+        "db-rebuild": [
+            "JustMeet\\DatabaseSetup::rebuild"
+        ],
         "post-install-cmd": [
-            "@symfony-scripts"
+            "@symfony-scripts",
+            "@db-rebuild"
         ],
         "post-update-cmd": [
-            "@symfony-scripts"
+            "@symfony-scripts",
+            "@db-rebuild"
         ]
     },
     "extra": {
