--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "^2.0",
         "twig/twig": "^1.0||^2.0",
-        "spaark/composite-utils": "*"
+        "spaark/composite-utils": "*",
+        "jms/serializer-bundle": "*"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
