adding prod mode to app.json

--- a/app.json
+++ b/app.json
@@ -14,6 +14,10 @@
     },
     "PAPERTRAIL_API_TOKEN": {
       "required": true
+    },
+    "SYMFONY_ENV": {
+      "description": "The number of processes to run.",
+      "value": "prod"
     }
   },
   "formation": {
