--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -43,7 +43,7 @@ twig:
 doctrine:
     dbal:
         driver:   pdo_mysql
-        url: "%env(DATABASE_URL)%"
+        url: "%env(JAWSDB_URL)%"
         charset:  UTF8
         # if using pdo_sqlite as your database driver:
         #   1. add the path in parameters.yml
