--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -30,5 +30,7 @@ monolog:
         #    type:   chromephp
         #    level:  info
 
-#swiftmailer:
-#    delivery_addresses: ['me@example.com']
+nelmio_api_doc:
+    name: Just Meet API Docs
+    cache:
+        enabled: false
