--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -12,3 +12,7 @@ _errors:
 
 _main:
     resource: routing.yml
+
+NelmioApiBundle:
+    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+    prefix: /docs
