--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "sensio/generator-bundle": "^3.0",
         "symfony/phpunit-bridge": "^3.0",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
-        "nelmio/api-doc-bundle": "2.11"
+        "nelmio/api-doc-bundle": "2.11",
+        "phpunit/phpunit": "3.7.*"
     },
     "scripts": {
         "symfony-scripts": [
