--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,3 +64,8 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+nelmio_api_doc:
+    name: Just Meet API Docs
+    cache:
+        enabled: false
