--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
+
+NelmioApiBundle:
+    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+    prefix: /docs
