--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "twig/twig": "^1.0||^2.0",
         "spaark/composite-utils": "dev-master",
         "jms/serializer-bundle": "*",
+        "nelmio/cors-bundle": "1.4.*",
         "nelmio/api-doc-bundle": "2.11"
     },
     "require-dev": {
