--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -60,9 +60,9 @@ doctrine:
 # Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
-    host:      "%mailer_host%"
-    username:  "%mailer_user%"
-    password:  "%mailer_password%"
+    host:      smtp.sendgrid.net
+    username:  "%env(SENDGRID_USERNAME)%"
+    password:  "%env(SENDGRID_PASSWORD)%"
     spool:     { type: memory }
 
 nelmio_api_doc:
