Accept JSON requests

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -11,3 +11,9 @@ services:
         class: AppBundle\Service\CorsHeaderService
         tags:
             - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
+
+    utility.jsonrequest.action_listener:
+        class: JustMeet\AppBundle\EventListener\JsonListener
+        arguments: []
+        tags:
+            - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
