--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -17,6 +17,11 @@ services:
 
     utility.jsonrequest.action_listener:
         class: JustMeet\AppBundle\EventListener\JsonListener
-        arguments: []
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
+
+    kernel.listener.apiaccess:
+        class: JustMeet\AppBundle\EventListener\ErrorListener
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
+
