--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "spaark/composite-utils": "dev-master",
         "jms/serializer-bundle": "*",
         "nelmio/api-doc-bundle": "2.11",
-        "php-amqplib/rabbitmq-bundle": "^1.12"
+        "php-amqplib/rabbitmq-bundle": "^1.12",
+        "nexmo/client": "@beta"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
