Pass parameters to SendSmsConsumer

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -14,6 +14,8 @@ services:
 
     send_sms_service:
         class: JustMeet\AppBundle\Consumer\SendSmsConsumer
+        arguments:
+            - "%nexmo%"
 
     utility.jsonrequest.action_listener:
         class: JustMeet\AppBundle\EventListener\JsonListener
