--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -9,3 +9,8 @@ parameters:
 
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
+
+    nexmo:
+        key:        "%env(NEXMO_KEY)%"
+        secret:     "%env(NEXMO_SECRET)%"
+
